apply plugin: 'com.android.library'
apply plugin: 'com.github.dcendents.android-maven'
group='com.github.Geetol3'

android {
    compileSdkVersion 26

    defaultConfig {
        minSdkVersion 17
        targetSdkVersion 26
        versionCode 16
        versionName "4.4.3"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

dependencies {
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:26.1.0'
    implementation 'com.android.support:support-v4:26.1.0'
    implementation  'com.android.support:support-fragment:26.1.0'
    implementation 'com.android.support:support-core-ui:26.1.0'
    compile 'com.squareup.okhttp3:okhttp:4.2.2'
    compile 'com.squareup.okio:okio:2.4.1'
    compile 'com.google.code.gson:gson:2.8.6'
    compile('com.github.bumptech.glide:glide:4.5.0') {
        exclude group: "com.android.support"
    }
    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
    compile 'jp.wasabeef:glide-transformations:2.0.2'
    // 阿里云oss
    compile 'com.aliyun.dpa:oss-android-sdk:+'
}
